<resources>
    <string name="test_teacher">teacher</string>
    <string name="app_name">课程管理系统</string>
    <string name="title_activity_recover">RecoverActivity</string>
    <string name="share">分享</string>
    <string name="input_uname">请输入您的学号/工号</string>
    <string name="input_pwd">请输入您的密码</string>
    <string name="input_conpwd">请再次输入密码</string>
    <string name="student">学生</string>
    <string name="teacher">教师</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="link_to_signup">还没有账号? 创建一个</string>
    <string name="link_to_login">已经有账号?前往登录</string>
    <string name="course_name">课程名称</string>
    <string name="course_descri">课程简介</string>
    <string name="course_list">课程列表</string>
    <string name="post_list">讨论区</string>
    <string name="course_detail">课程详情</string>
    <string name="course_image">课程图片</string>
    <string name="course_time">上课时间</string>
    <string name="course_place">上课地点</string>
    <string name="course_capacity">课程容量</string>
    <string name="student_num">已选人数</string>
    <string name="join_course">加入课程</string>
    <string name="invitation">课程邀请码</string>
    <string name="input_invitation">请输入课程邀请码</string>
    <string name="feedback">意见反馈</string>
    <string name="aboutus">关于我们</string>
    <string name="mylist">我的课程</string>
    <string name="notlogin">未登录</string>
    <string name="back">返回</string>
    <string name="search_icon">搜索按钮</string>
    <string name="searchHint">请输入关键字</string>
    <string name="post">发表帖子</string>
    <string name="mylikes">我的收藏</string>
    <string name="mypost">我的帖子</string>
    <string name="postcontent">帖子评论</string>
    <string name="text">常量池
            常量池中主要存放两大类常量：字面量（Literal）和符号引用（Symbolic References）
            字面量比较接近于Java语言层面的常量概念，如文本字符串、声明为final的常量值等。
            而符号引用则属于编译原理方面的概念，包括了下面三类常量：
            a. 类和接口的全限定名
            b. 字段的名称和描述符
            c. 方法的名称和描述符
            Java代码在进行Javac编译的时候，并不像C和C++那样有 “连接”这一步骤，而是在
            虚拟机加载Class文件的时候进行动态连接。也就是说，在Class文件中不会保存各个
            方法、字段的最终内存布局信息，因此这些字段、方法的符号引用不经过运行期转换
            的话就无法得到真正的内存入口地址，也就无法直接被虚拟机使用。当虚拟机运行时
            需要从常量池获取对应的符号引用，再在类创建时或运行时解析、翻译到具体的内存
            地址中。
            常量池
            常量池中主要存放两大类常量：字面量（Literal）和符号引用（Symbolic References）
            字面量比较接近于Java语言层面的常量概念，如文本字符串、声明为final的常量值等。
            而符号引用则属于编译原理方面的概念，包括了下面三类常量：
            a. 类和接口的全限定名
            b. 字段的名称和描述符
            c. 方法的名称和描述符

            Java代码在进行Javac编译的时候，并不像C和C++那样有 “连接”这一步骤，而是在
            虚拟机加载Class文件的时候进行动态连接。也就是说，在Class文件中不会保存各个
            方法、字段的最终内存布局信息，因此这些字段、方法的符号引用不经过运行期转换
            的话就无法得到真正的内存入口地址，也就无法直接被虚拟机使用。当虚拟机运行时
            需要从常量池获取对应的符号引用，再在类创建时或运行时解析、翻译到具体的内存
            地址中。
    </string>
</resources>
