<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/course_card"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_margin="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp">

            <ImageView
                android:id="@+id/course_img"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:src="@drawable/lesson_holder"
                android:contentDescription="@string/course_image" />

            <TextView
                android:id="@+id/course_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/course_img"
                android:text="@string/course_name"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/course_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:maxLines="1"
                android:ellipsize="end"
                android:text="@string/course_descri"/>

            <TextView
                android:id="@+id/student_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_alignBottom="@id/course_name"
                android:layout_alignParentEnd="true"/>

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:src="@mipmap/selectors"
                android:layout_alignBottom="@+id/course_name"
                android:layout_toStartOf="@+id/student_num"
                android:contentDescription="@string/course_capacity" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
